syntax = "proto3";

package vm_service;

service VMService {
  rpc GetTask (TaskRequest) returns (TaskResponse) {}
  rpc SubmitResult(TaskResultRequest) returns (TaskResultResponse) {}
}

message GenericResponse {
  bool success = 1;
  string message = 2;
}

message TaskRequest {}

message Task {
  string tx_hash = 1;
  string name = 2;
  repeated string args = 3;
  repeated string files = 4;
}

enum TaskError {
  Unavailable = 0;
  Failed = 1;
}

message TaskResponse {
  oneof result {
    Task task = 1;
    TaskError error = 2;
  }
}

message GetFileRequest {
  string task_id = 1;
  string path = 2;
}

message File {
  string path = 1;
  bytes checksum = 2;
}

message FileMetadata {
  string task_id = 1;
  string path = 2;
}

message FileChunk {
  bytes data = 1;
}

enum FileError {
  NotFound = 0;
}

message FileData {
  oneof result {
    FileMetadata metadata = 1;
    FileChunk chunk = 2;
    FileError error = 3;
  }
}

message TaskResult {
  bytes data = 2;
  repeated File files = 3;
}

message TaskResultRequest {
  string tx_hash = 1;
  oneof result {
    TaskResult task = 2;
    TaskError error = 3;
  }
}

message TaskResultResponse {
  bool continue = 1;
}
